# kanban

./: .gitignore  README.md
.github/workflows/: cli-release.yml  cli.yml  server-publish.yml  server.yml  web-ui-publish.yml  web-ui.yml
cli/: Cargo.toml  index.js  package-lock.json  package.json
cli/src/: main.rs
server/: Cargo.toml  Dockerfile
server/src/: main.rs
web-ui/: Dockerfile  package-lock.json  package.json  tsconfig.json
web-ui/app/: root.tsx
web-ui/app/routes/: _index.tsx  kanbans.$id.tsx
